apps/xvideo/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: xvideo
subsets:
  - addresses:
      - ip: 192.168.102.18
    ports:
      - port: 30013
