apps/xvideo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: xvideo
spec:
  ports:
    - port: 30013
